--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -82,9 +82,9 @@ MOSI. Til mikrocontrolleren sendes skiftevis motorposition fra pan og tilt.
 
 \subsection{Producering af PWM signal til motorerne på PTS}
 I PWM komponenten produceres PWM-signalerne på baggrund af duty cycle værdier modtaget via. SPI. 
-PWM bliver produceret ved at tælle en tæller op fra 0 til 2047 med 50 MHz.
+PWM bliver produceret ved at tælle en tæller op fra 0 til 2047 med 50 [MHz].
 PWM udgangen sættes høj indtil tælleren når dutycycle værdien og sættes lav 
-ellers. Hermed er der produceret et PWM med en frekvens på ca. 24 kHz.
+ellers. Hermed er der produceret et PWM med en frekvens på ca. 24 [kHz].
 
 \subsection{Optælling af motorernes rotationer vha. encoders på PTS}
 Da encoderne på motorerne er quadrature,
