--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -4,8 +4,8 @@ Bestemmelsen tager udgangspunkt i en analytisk fremgangsmåde ved brug af \emph{
 \centering
 \begin{tabu}{l|[1.25pt]c|c|c}
       & \(K_P\) & \(K_I\) & \(K_D\)\\\tabucline[1.25pt]{-}
-Tilt  & 74,4933 & 435,0662 & -\\\hline%0,248960\\\hline
-Pan   & 37,1740 &  33,3610 & 0,215658
+Tilt  & 38,5 & 20 & -\\\hline%0,248960\\\hline
+Pan   & 27 &  6,83 & -
 \end{tabu}
 \captionsetup{type=table}
 \caption[Regulator koefficienter brugt i test]{Regulator koefficienter brugt til test af PTS.}
