--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -282,12 +282,34 @@ Hvis det er nødvendigt at nedjustere udsvinget kan det være nødvendigt at anv
 og derfor implementeres algoritmen til en PID-regulator på mikrocontrolleren.
 Hvis kun en PI-regulator er nødvendigt, kan man altså blot nulstille D-leddet.
 
-For at integratoren hurtigst muligt kan levere den nødvendige PWM-duty cycle til minimering af fejlsignalet,
-vælges det desuden at implementere et "bias", der tager højde for dødbåndet.
+\subsubsection{Dødzone}
+For at regulatoren hurtigst muligt kan levere den nødvendige PWM-duty cycle til minimering af fejlsignalet,
+vælges det desuden at implementere et "bias", der tager højde for dødzonen.
 \todo[inline,author=Mikael]{Opdatér bias når vi er helt færdige med PID-tuning!}
 Bias er implementeret med en nedre duty cycle grænse på 0.97\% for pan og tilt.
 Deres respektive øvre grænser er hhv. 11,72\% og 13,18\%.
 Disse værdier er fundet eksperimentelt ved Trial-and-Error metoden under PID-justeringen.
-Hvis controlleren returnerer en duty cycle mellem den nedre og øvre grænse, sættes duty cycle til dens øvre grænse.
+Hvis regulatoren returnerer en duty cycle mellem den nedre og øvre grænse, sættes duty cycle til dens øvre grænse.
 Dette medfører at motoreren kan justere sig ind, selvom fejlen er marginal.
 Den nedre grænse er bestemt således positionen er indenfor ét encoder tick.
+
+\subsubsection{Integratormætning}
+Mætningen på PWM-duty cyclen gør, at systemet ikke er lineær i dette område. Med integratormætning 
+tages højde for denne ulinearitet. Uden integratormætning kan det numeriske integrale blive enormt når 
+PWM-mætningen nås. Dette vil fører til stort overshoot og derved dårlig 
+performance. 
+Værdien for integratormætningen skal vælges med omhu, da valg af en for lille 
+mætning vil mindske effekten af integratorleddet i PID, 
+hvilket i værste tilfælde vil sætte integratorleddet ud af funktion.
+Et for højt valg vil føre til at tilføjelse af integratormætningen ikke vil ændre 
+performance, som ønsket.
+
+Et passende valg af integratormætning vurderes til at være når ligning \ref{eq:integratorsaturation} 
+overholdes.
+
+\begin{equation}
+	K_I \cdot Integrator_{Max} \approx PWM_{Max}
+\label{eq:integratorsaturation}
+\end{equation}
+\todo[inline,author=Mikkel,color=Pink]{Jeg mangler kilde for ovenstående, men kan ikke finde noget. Det er bare mit bedste bud.}
+
