--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -16,8 +16,7 @@ Efter bestemmelsen af koefficienterne, blev de testet i controlleren.
 For at finde ud af, hvorgodt PTS med nævnte koefficienter lever op kravene for PTS, eksporteres den ønsket og aktuelle værdi for hhv. pan og tilt. Herefter blev den samlet difference for pan og tilt plottet i figur \ref{fig:PID_test14_plot}.
 \begin{figure}[h!]
 \centering
-% Der mangler en figure, hvor systemets fejl, pan og tilt er vist i samme figur. Det skal laves ud fra de tal som der er kommet frem til i PID optimeringen.
-%\includegraphics[width=0.5\textwidth]{./graphics/error_pan.eps}
+\includegraphics[width=1\textwidth]{./graphics/error_start.eps}
 \caption[Regulator koefficienter brugt i test]{Tracking fejl målt i grader for hhv. pan og tilt samt den samlet tracking fejl. Testen tager udgangspunkt i koefficienterne fra  tabel \ref{tb:PID_test14}.} 
 \label{fig:PID_test14_plot}
 \end{figure}
