--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -57,8 +57,7 @@ Pan   & & &
 
 \begin{figure}[h!]
 \centering
-% Der mangler en figure, hvor systemets fejl, pan og tilt er vist i samme figur. Det skal laves ud fra de tal som der er kommet frem til i PID optimeringen.
-%\includegraphics[width=0.5\textwidth]{./graphics/error_pan.eps}
+%\includegraphics[width=1\textwidth]{./graphics/error_slut.eps}
 \caption[Endelig regulator koefficienter]{Tracking fejl målt i grader for hhv. pan og tilt samt den samlet tracking fejl. Testen tager udgangspunkt i koefficienterne fra  tabel \ref{tb:PID_final} og det ses at den samlet tracking fejl opfylder kravet til PTS.} 
 \label{fig:PID_final}
 \end{figure}
