Tilføjet ny overskrift og linjeskift

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -52,8 +52,8 @@ Dog viste det sig, at hall sensorernes output ikke kun er højt på ét encodert
 men derimod adskillige. Det er nødvendigt at FPGA'en tager højde for 
 dette.
 
-\subsection{Opbygningen på FPGA}
-\todo[inline,author=Mikael]{Opbygning på FPGA... Det lyder lidt mærkeligt, gør det ikke? Foreslår vi finder en bedre overskrift.}
+\subsection{Implementering på FPGA}
+\todo[inline,author=Mikkel,color=pink]{Er overskriften god nok? (Mikael)}
 På figur \ref{fig:FPGA_blok} ses et simplificeret diagram over komponenterne på FPGA'en. 
 De grønne bokse angiver komponenter på FPGA'en, mens de grå cirkler angiver, hvad der ikke ligger på 
 FPGA'ens chip. Pilene imellem FPGA'ens komponenter angiver retningen af 
