fixet listings figurtekst

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -97,6 +97,8 @@ commentstyle=\color{ForestGreen}\ttfamily,
 morecomment=[l][\color{brown}]{\#},
 stringstyle=\color{red}
 }
+%Figurtekst under kode udsnit
+\renewcommand\lstlistingname{Kodeudsnit}
 
 %%%%%%% Diverse %%%%%%%
 \usepackage{icomma}
