--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -30,8 +30,8 @@ De primære ansvarsområder er listet i nedenstående tabel
 Navn&Opgaver/Ansvarsområder \\[6pt] \hline
 Åse&\\
 &\\[6pt] \hline
-Mikkel&\\ 
-&\\[6pt] \hline
+Mikkel& DJ\\ 
+& Food supply\\[6pt] \hline
 Mikael&\\
 &\\[6pt] \hline
 Nikolaj&\\
