fjernet indrykning i abstract

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -8,6 +8,11 @@
 \include{./content/forside}
 %\cleardoublepage
 \clearpage
+
+% Disable indentation
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{0.7\baselineskip}%
+
 \include{./content/abstract}
 \include{./content/templates} % Kan bruges til copy paste ind i rapport for forskellige outputs.....
 \include{./content/ansvarsomraader}
@@ -28,8 +33,8 @@
 
 
 % Disable indentation
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{0.7\baselineskip}%
+%\setlength{\parindent}{0pt}
+%\setlength{\parskip}{0.7\baselineskip}%
 
 
 
