--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,5 +1,6 @@
-\part{Regulator justering og PTS verifikation}
-I denne del optimeres regulatorkoefficienterne i reguleringssløjferne for PTS.
+%\part{Regulator justering og PTS verifikation}
+\part{Regulator justering}
+I denne del optimeres performance ved at ændre på regulatorene for pan og tilt.
 Herefter vurderes PTS's performance i forhold til kravspecifikationen.
 \input{./content/PID_optimering}
 %\include{./content/PTS_verifikation}
