Bilag fixed med magi :)

--- a/Rapport/content/bilag.tex
+++ b/Rapport/content/bilag.tex
@@ -1,3 +1,12 @@
 \part{Bilag}
-%%\section{Projektoplæg}
-\includepdf[pages={1,2}]{./content/Projekt_2014.pdf}
+\section{Projektoplæg}
+
+\begin{figure}[th!]
+\centering
+\includepdf[scale=0.82]{./content/Projekt_2014-1.pdf}
+\end{figure}
+\newpage
+\begin{figure}[th!]
+\centering
+\includepdf[scale=0.82]{./content/Projekt_2014-2.pdf}
+\end{figure}
