fixet margin i ansvarsområder

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -2,7 +2,6 @@
 
 
 
-
 \vspace{3cm}
 {
 \newcommand{\namesigdate}[2][5cm]{%
@@ -12,11 +11,11 @@
     %{\small \textit{Date}}
   \end{tabular}
 }
-\begin{changemargin}{-1cm}{-1cm}
+\begin{changemargin}{-0cm}{-0cm}
 \centering
-\noindent \namesigdate{Åse Videbæk Jensen} \hspace{1cm} \namesigdate{Nikolaj Iversen} \hspace{1cm} \namesigdate{Mikkel Jaedicke} \\~\\~\\
+\noindent \namesigdate[4.3cm]{Åse Videbæk Jensen} \hspace{1cm} \namesigdate[4.3cm]{Nikolaj Iversen} \hspace{1cm} \namesigdate[4.3cm]{Mikkel Jaedicke} \\~\\~\\
 \centering
-\noindent \namesigdate{Anders Launer Bæk} \hspace{1cm}  \namesigdate{Mikael Westermann} \hspace{1cm}   \namesigdate{Michael Kjær Schmidt}
+\noindent \namesigdate[4.3cm]{Anders Launer Bæk} \hspace{1cm}  \namesigdate[4.3cm]{Mikael Westermann} \hspace{1cm}   \namesigdate[4.3cm]{Michael Kjær Schmidt}
 \end{changemargin}
 }
 \bigskip
