--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -1,10 +1,11 @@
 \section*{Forord}
 Projektet er udarbejdet som en del af 4. semester kurset ”Indlejrede systemer”, under bachelordelen af Civilingeniøruddannelsen i Robotteknologi. 
-Projektet blev udarbejdet i tidsrummet 19. februar til 28. maj 2014, af en gruppe på 6 studerende.
-Rapporten beskriver udarbejdelsen af lerduetracking på et Pan \& Tilt System. 
+Projektet blev udarbejdet i tidsrummet 19. februar til 28. maj 2014 af en gruppe på 6 studerende.
+%Rapporten beskriver udarbejdelsen af lerduetracking på et Pan \& Tilt System. 
+Rapporten beskriver udarbejdelsen af styring til tracking af en lerdue vha. et Pan \& Tilt system.
 Herunder lægges især vægt på hvilke valg der er truffet undervejs og hvorfor. 
-Rapportens målgruppe er andre studerende med kompetenceniveau svarende til 4. semester eller derover, på samme eller lignende uddannelser.
-Formålet med projektet er at kombinere semestrets forskellige fagligheder, og samtidig oparbejde kompetencer i problemorienteret projektarbejde.
+Rapportens målgruppe er andre studerende med kompetenceniveau svarende til 4. semester eller derover på samme eller lignende uddannelser.
+Formålet med projektet er at kombinere semestrets forskellige fagligheder og samtidig oparbejde kompetencer i problemorienteret projektarbejde.
 \bigskip
 \begin{center}
 En stor tak til \\
