--- a/Rapport/content/bilag.tex
+++ b/Rapport/content/bilag.tex
@@ -3,10 +3,10 @@
 
 \begin{figure}[th!]
 \centering
-\includepdf[scale=0.82]{./content/Projekt_2014-1.pdf}
+\includegraphics[scale=0.74125]{./content/Projekt_2014-1.pdf}
 \end{figure}
 \newpage
 \begin{figure}[th!]
 \centering
-\includepdf[scale=0.82]{./content/Projekt_2014-2.pdf}
+\includegraphics[scale=0.74125]{./content/Projekt_2014-2.pdf}
 \end{figure}
