--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,11 +1,14 @@
 \section*{Indledning}
 Trackingsystemer spiller en stadig større rolle i vores hverdag og ses ofte i gadebilledet i form 
 af f.eks. overvågningskameraer.
-Fælles for mange af sådanne systemer er, at de er styret af et pan \& tilt system. 
+Fælles for mange af sådanne trackingsystemer er, at de bruger et pan \& tilt system til at følge deres mål. 
+
 I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues bevægelse i 
 luften. For at udvikle et sådant system skal en passende regulator designes og implementeres
 på en mikrocontroller. 
-Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
-Projektet udføres i overensstemmelse med det tilhørende projektoplæg, som er vedlagt 
+%Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
+En FPGA  bruges til at holde læse systemets position og skrive ønsket PWM til motorerne. 
+Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
+Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
-\todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning.}
+\todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
